Translate to English

--- a/01/index.html
+++ b/01/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Чат-бот</title>
+    <title>Chat Bot</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="chat-container">
         <div id="chat-header">
-            <h1>Чат-бот</h1>
+            <h1>Chat Bot</h1>
         </div>
         <div id="chat-messages"></div>
         <div id="input-container">
-            <input type="text" id="question-input" placeholder="Введите ваш вопрос...">
-            <button id="send-button">Отправить</button>
+            <input type="text" id="question-input" placeholder="Enter your question...">
+            <button id="send-button">Send</button>
         </div>
     </div>
     <script src="app.js"></script>
