Update button color

--- a/05/index.html
+++ b/05/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interaction of agents</title>
+    <title>MCP start</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="chat-container">
         <div id="chat-header">
-            <h1>Interaction of agents</h1>
+            <h1>MCP start</h1>
         </div>
         <div id="agent-status"></div>
         <div id="chat-messages"></div>
