--- a/13/web-app/index.html
+++ b/13/web-app/index.html
@@ -71,6 +71,18 @@
                             <input type="file" id="file-input" accept=".js,.ts,.py,.java,.go">
                             <button id="test-file-button" class="test-button">🧪 Протестировать файл</button>
                         </div>
+                        
+                        <div class="testing-section">
+                            <h3>🤖 Автоматическое тестирование JavaScript</h3>
+                            <div class="auto-test-controls">
+                                <button id="auto-test-example" class="test-button">🚀 Тест примера JavaScript</button>
+                                <button id="test-github-analysis" class="test-button">🔍 Тест github-analysis.js</button>
+                                <button id="clear-test-history" class="test-button">🗑️ Очистить историю</button>
+                            </div>
+                            <div class="auto-test-info">
+                                <small>Автоматическое тестирование JavaScript файлов в test-agent-mcp</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -81,6 +93,8 @@
     <script src="github-analysis.js"></script>
     <script src="test-agent.js"></script>
     <script src="test-agent-module.js"></script>
+    <script src="auto-test-sender.js"></script>
+    <script src="example-usage.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
