Add Yandex Cloud for report upload

--- a/test-agent-mcp/public/index.html
+++ b/test-agent-mcp/public/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header">
             <h1>🧪 Test Agent</h1>
-            <p>Автоматическое тестирование кода с помощью ИИ</p>
+            <p>Автоматическое тестирование кода с помощью GigaChat</p>
         </div>
 
         <div class="main-card">
@@ -57,7 +57,7 @@
             <div id="loading" class="loading">
                 <div class="spinner"></div>
                 <h3>Генерация тестов...</h3>
-                <p>Анализируем код и создаем тесты с помощью ИИ</p>
+                <p>Анализируем код и создаем тесты с помощью GigaChat</p>
             </div>
 
             <div id="results" class="results">
